@@ -1,5 +1,5 @@
 name=U8g2
-version=2.2.5
+version=2.2.6
 author=oliver <olikraus@gmail.com>
 maintainer=oliver <olikraus@gmail.com>
 sentence=Library for monochrome LCDs and OLEDs. Successor of U8glib.
