@@ -156,6 +156,7 @@ static const u8x8_display_info_t u8x8_st7920_192x32_display_info =
   /* post_reset_wait_ms = */ 6, 
   /* sda_setup_time_ns = */ 20,		
   /* sck_pulse_width_ns = */  140,	/* datasheet ST7920 */
+  /* sck_clock_hz = */ 1000000UL,	/* since Arduino 1.6.0, the SPI bus speed in Hz. Should be  1000000000/sck_pulse_width_ns */
   /* spi_mode = */ 1,		/* old: sck_takeover_edge, new: active high (bit 1), rising edge (bit 0) */
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 30,
@@ -179,6 +180,7 @@ static const u8x8_display_info_t u8x8_st7920_128x64_display_info =
   /* post_reset_wait_ms = */ 6, 
   /* sda_setup_time_ns = */ 20,		
   /* sck_pulse_width_ns = */  140,	/* datasheet ST7920 */
+  /* sck_clock_hz = */ 1000000UL,	/* since Arduino 1.6.0, the SPI bus speed in Hz. Should be  1000000000/sck_pulse_width_ns */
   /* spi_mode = */ 1,		/* active high, rising edge */
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 30,
