@@ -134,6 +134,7 @@ static const u8x8_display_info_t u8x8_t6963_240x128_display_info =
   /* post_reset_wait_ms = */ 6, 
   /* sda_setup_time_ns = */ 20,		
   /* sck_pulse_width_ns = */  140,	
+  /* sck_clock_hz = */ 1000000UL,	/* since Arduino 1.6.0, the SPI bus speed in Hz. Should be  1000000000/sck_pulse_width_ns */
   /* spi_mode = */ 1,		
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 80,
@@ -220,6 +221,7 @@ static const u8x8_display_info_t u8x8_t6963_256x64_display_info =
   /* post_reset_wait_ms = */ 6, 
   /* sda_setup_time_ns = */ 20,		
   /* sck_pulse_width_ns = */  140,	
+  /* sck_clock_hz = */ 1000000UL,	/* since Arduino 1.6.0, the SPI bus speed in Hz. Should be  1000000000/sck_pulse_width_ns */
   /* spi_mode = */ 1,		
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 80,
@@ -302,6 +304,7 @@ static const u8x8_display_info_t u8x8_t6963_128x64_display_info =
   /* post_reset_wait_ms = */ 6, 
   /* sda_setup_time_ns = */ 20,		
   /* sck_pulse_width_ns = */  140,	
+  /* sck_clock_hz = */ 1000000UL,	/* since Arduino 1.6.0, the SPI bus speed in Hz. Should be  1000000000/sck_pulse_width_ns */
   /* spi_mode = */ 1,		
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 80,
