@@ -1,6 +1,6 @@
 /*
 
-  u8x8_d_uc1701_dogs102.c
+  u8x8_d_uc1701_mini12864.c (dealextreme, displays from ebay MP3 players)
   
   Universal 8bit Graphics Library (https://github.com/olikraus/u8g2/)
 
@@ -38,7 +38,7 @@
 
 
 
-static const uint8_t u8x8_d_uc1701_dogs102_init_seq[] = {
+static const uint8_t u8x8_d_uc1701_mini12864_init_seq[] = {
     
   U8X8_START_TRANSFER(),             	/* enable chip, delay is part of the transfer start */
   
@@ -46,40 +46,41 @@ static const uint8_t u8x8_d_uc1701_dogs102_init_seq[] = {
   U8X8_C(0x0ae),		                /* display off */
   U8X8_C(0x040),		                /* set display start line to 0 */
   
-  U8X8_C(0x0a1),		                /* ADC set to reverse */
-  U8X8_C(0x0c0),		                /* common output mode */
-  // Flipmode
-  //U8X8_C(0x0a0),		                /* ADC set to reverse */
-  //U8X8_C(0x0c8),		                /* common output mode */
+  U8X8_C(0x0a0),		                /* ADC set to reverse */
+  U8X8_C(0x0c8),		                /* common output mode */
   
   U8X8_C(0x0a6),		                /* display normal, bit val 0: LCD pixel off. */
   U8X8_C(0x0a2),		                /* LCD bias 1/9 */
   U8X8_C(0x02f),		                /* all power  control circuits on */
-  U8X8_C(0x027),		                /* regulator, booster and follower */
-  U8X8_CA(0x081, 0x00e),		/* set contrast, contrast value, EA default: 0x010, previous value for S102: 0x0e */
-  U8X8_C(0x0fa),		                /* Set Temp compensation */ 
-  U8X8_C(0x090),		                /* 0.11 deg/c WP Off WC Off*/
+  U8X8_C(0x0f8),		/* set booster ratio to */
+  U8X8_C(0x000),		/* 4x */
+  U8X8_C(0x023),		/* set V0 voltage resistor ratio to large */
+  U8X8_C(0x081),		/* set contrast */
+  U8X8_C(0x027),		/* contrast value */
+  U8X8_C(0x0ac),		/* indicator */
+  //  0x000,		/* disable */
+  
   U8X8_C(0x0a4),		                /* normal display  */
   
   U8X8_END_TRANSFER(),             	/* disable chip */
   U8X8_END()             			/* end of sequence */
 };
 
-static const uint8_t u8x8_d_uc1701_dogs102_powersave0_seq[] = {
+static const uint8_t u8x8_d_uc1701_mini12864_powersave0_seq[] = {
   U8X8_START_TRANSFER(),             	/* enable chip, delay is part of the transfer start */
   U8X8_C(0x0af),		                /* display on */
   U8X8_END_TRANSFER(),             	/* disable chip */
   U8X8_END()             			/* end of sequence */
 };
 
-static const uint8_t u8x8_d_uc1701_dogs102_powersave1_seq[] = {
+static const uint8_t u8x8_d_uc1701_mini12864_powersave1_seq[] = {
   U8X8_START_TRANSFER(),             	/* enable chip, delay is part of the transfer start */
   U8X8_C(0x0ae),		                /* display off */
   U8X8_END_TRANSFER(),             	/* disable chip */
   U8X8_END()             			/* end of sequence */
 };
 
-static const uint8_t u8x8_d_uc1701_dogs102_flip0_seq[] = {
+static const uint8_t u8x8_d_uc1701_mini12864_flip0_seq[] = {
   U8X8_START_TRANSFER(),             	/* enable chip, delay is part of the transfer start */
   U8X8_C(0x0a1),				/* segment remap a0/a1*/
   U8X8_C(0x0c0),				/* c0: scan dir normal, c8: reverse */
@@ -87,7 +88,7 @@ static const uint8_t u8x8_d_uc1701_dogs102_flip0_seq[] = {
   U8X8_END()             			/* end of sequence */
 };
 
-static const uint8_t u8x8_d_uc1701_dogs102_flip1_seq[] = {
+static const uint8_t u8x8_d_uc1701_mini12864_flip1_seq[] = {
   U8X8_START_TRANSFER(),             	/* enable chip, delay is part of the transfer start */
   U8X8_C(0x0a0),				/* segment remap a0/a1*/
   U8X8_C(0x0c8),				/* c0: scan dir normal, c8: reverse */
@@ -112,15 +113,15 @@ static const u8x8_display_info_t u8x8_uc1701_display_info =
   /* i2c_bus_clock_100kHz = */ 4,
   /* data_setup_time_ns = */ 30,
   /* write_pulse_width_ns = */ 40,
-  /* tile_width = */ 13,		/* width of 13*8=104 pixel */
+  /* tile_width = */ 16,		/* width of 16*8=128 pixel */
   /* tile_hight = */ 8,
   /* default_x_offset = */ 0,
   /* flipmode_x_offset = */ 30,
-  /* pixel_width = */ 102,
+  /* pixel_width = */ 128,
   /* pixel_height = */ 64
 };
 
-uint8_t u8x8_d_uc1701_ea_dogs102(u8x8_t *u8x8, uint8_t msg, uint8_t arg_int, void *arg_ptr)
+uint8_t u8x8_d_uc1701_mini12864(u8x8_t *u8x8, uint8_t msg, uint8_t arg_int, void *arg_ptr)
 {
   uint8_t x, c;
   uint8_t *ptr;
@@ -131,23 +132,23 @@ uint8_t u8x8_d_uc1701_ea_dogs102(u8x8_t *u8x8, uint8_t msg, uint8_t arg_int, voi
       break;
     case U8X8_MSG_DISPLAY_INIT:
       u8x8_d_helper_display_init(u8x8);
-      u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_dogs102_init_seq);
+      u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_mini12864_init_seq);
       break;
     case U8X8_MSG_DISPLAY_SET_POWER_SAVE:
       if ( arg_int == 0 )
-	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_dogs102_powersave0_seq);
+	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_mini12864_powersave0_seq);
       else
-	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_dogs102_powersave1_seq);
+	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_mini12864_powersave1_seq);
       break;
     case U8X8_MSG_DISPLAY_SET_FLIP_MODE:
       if ( arg_int == 0 )
       {
-	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_dogs102_flip0_seq);
+	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_mini12864_flip0_seq);
 	u8x8->x_offset = u8x8->display_info->default_x_offset;
       }
       else
       {
-	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_dogs102_flip1_seq);
+	u8x8_cad_SendSequence(u8x8, u8x8_d_uc1701_mini12864_flip1_seq);
 	u8x8->x_offset = u8x8->display_info->flipmode_x_offset;
       }	
       break;
